# discord

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json
src/: config.rs  main.rs
src/bot/: mod.rs
src/bot/commands/: mod.rs  start_spotify.rs
src/server/: mod.rs
src/spotify/: auth.rs  connect.rs  mod.rs  sink.rs
src/store/: mod.rs
