[package]
name = "discord-spotify-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discord-spotify-bot"
path = "src/main.rs"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "rustls_backend", "model", "cache", "voice",
] }
songbird = { version = "0.5", features = ["serenity", "driver", "rustls"] }

# Spotify / librespot — tag v0.8.0 for consistent build-script deps
librespot-core     = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0", default-features = false }
librespot-connect  = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }

# symphonia — core types + PCM codec (davey fork has symphonia default-features=false,
# so CODEC_TYPE_PCM_F32LE has no decoder; adding the pcm feature here fixes that)
symphonia-core = "0.5"
symphonia = { version = "0.5", default-features = false, features = ["pcm"] }

# Web server
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency / state
crossbeam-channel = "0.5"
dashmap = "6"

# HTTP client for Spotify Web API
reqwest = { version = "0.12", features = ["json"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async streams (for dealer subscription)
futures-util = "0.3"

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
url = "2"
base64 = "0.22"

# Patch songbird with the DAVE/E2EE fork until PR #291 lands
# https://github.com/serenity-rs/songbird/pull/291
[patch.crates-io]
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "davey" }
